app/src/main/java/com/example/cashmanagement/errors/BaseError.java
package com.example.cashmanagement.errors;

/**
 * Created by christo.christov on 24.10.2017 г..
 */

public class BaseError {
    public void takeAction(){
    }
}
